Ticket #516 (closed defect: fixed)

Opened 3 years ago

Last modified 2 years ago

--ts-extra-pmt is broken

Reported by: hartman Assigned to:
Priority: low Milestone: Bugs paradize
Component: Demuxers Version: master
Severity: minor Keywords:
Cc: Platform(s): all
Difficulty: unknown Work status: Not started

Description

In trying to get the VDR TS streams to work (which don't include PMT/PAT), i tried out this option. Unfortunatly it makes VLC crash with memory corruption. There is at least one problem with the malloc of pmt->psi->prg i suspect, and another with the freeing of the PIDs when VLC closes, in case we use this method.

Change History

31/01/06 14:28:30 changed by tumu

  • milestone changed from 0.8.6 features freeze to 0.8.5-test1.

22/02/06 15:52:23 changed by zorglub

  • milestone changed from 0.8.5-test1 to 0.8.5-test2.

29/03/06 16:47:47 changed by hartman

  • milestone changed from 0.8.5-test2 to 0.8.5-test3.

09/04/06 17:37:23 changed by zorglub

  • milestone changed from 0.8.5-test3 to Bugs paradize.

25/02/07 12:53:21 changed by fenrir

  • status changed from new to closed.
  • resolution set to fixed.

(In [18998]) Fixed --ts-extra-pmt (close #516) Added VC-1 detection (SMPTE RP 227)