Fixed --ts-extra-pmt (close #516) Added VC-1 detection (SMPTE RP 227)